--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,9 @@
 FROM nginx:1.11.5-alpine
 
+RUN apk update \
+        && apk add --no-cache php7-fpm \
+            php7-mysqlnd \
+            php7-pdo \
+            
+
+
